fix(theme): adjust footer font-size and remove text-wrap

--- a/src/Themes/Theme.Expose/Templates/main.css
+++ b/src/Themes/Theme.Expose/Templates/main.css
@@ -602,9 +602,8 @@ footer {
   padding-top: var(--space-l);
 }
 footer div {
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-1);
   color: hsl(var(--color-light-hsl));
-  text-wrap: nowrap;
 }
 footer nav {
   grid-column: content;
